// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label as a static label should render 1`] = `
.c1 {
  font-size: 12px;
  display: auto;
  color: #3E4242;
}

.c0 {
  display: block;
  position: relative;
  text-align: left;
}

<label
  class="c0"
  for="first-name"
>
  <span
    class="c1"
  >
    First Name
  </span>
</label>
`;

exports[`Label as a static label should render with active state 1`] = `
.c1 {
  font-size: 12px;
  display: auto;
  color: #3E4242;
}

.c0 {
  display: block;
  position: relative;
  text-align: left;
}

<label
  class="c0"
  for="first-name"
>
  <span
    class="c1"
  >
    First Name
  </span>
</label>
`;

exports[`Label as a static label should render with disabled state 1`] = `
.c1 {
  font-size: 12px;
  display: auto;
  color: #C4C4C4;
}

.c0 {
  display: block;
  position: relative;
  text-align: left;
}

<label
  class="c0"
  for="first-name"
>
  <span
    class="c1"
    disabled=""
  >
    First Name
  </span>
</label>
`;

exports[`Label as a static label should render with error state 1`] = `
.c1 {
  font-size: 12px;
  display: auto;
  color: #DB7B71;
}

.c0 {
  display: block;
  position: relative;
  text-align: left;
}

<label
  class="c0"
  for="first-name"
>
  <span
    class="c1"
  >
    First Name
  </span>
</label>
`;

exports[`Label as an animated label should render 1`] = `
.c1 {
  position: absolute;
  display: initial;
  top: 2px;
  left: 1px;
  font-size: 14px;
  max-width: 100%;
  padding: 0px 2px;
  margin: 0px;
  -webkit-transition: color .1s cubic-bezier(0,0,0.2,1), -webkit-transform .1s cubic-bezier(0,0,0.2,1);
  -webkit-transition: color .1s cubic-bezier(0,0,0.2,1), transform .1s cubic-bezier(0,0,0.2,1);
  transition: color .1s cubic-bezier(0,0,0.2,1), transform .1s cubic-bezier(0,0,0.2,1);
  z-index: 6;
  background: #FFFFFF;
  color: #A5B0AE;
}

.c0 {
  display: block;
  position: relative;
  text-align: left;
}

<label
  class="c0"
  for="first-name"
>
  <span
    class="c1"
  >
    First Name
  </span>
</label>
`;
